--- a/styles/style.css
+++ b/styles/style.css
@@ -2,19 +2,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #70A288;
-
 }
 
 .main{
     width: 100%;
 }
+
+h3{
+    background-color: #70A288;
+    font-size: large;
+    text-align: center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #DAB785;
+    border: solid;
+
   }
   
   li {
@@ -28,29 +35,62 @@ ul {
   
   li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
   
   li a:hover:not(.active) {
-    background-color: #111;
+    background-color: #70A288;
   }
   
   .active {
-    background-color: #04AA6D;
+    background-color: #70A288;
+  }
+  .login-user {
+    height: 1em;
+    margin-right: 0.5em;
+    vertical-align: bottom
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  .centerphoto{
+    width: 500px;
+    height: 300px;
+    border-radius: 25%;
+    overflow: hidden;
+    margin: 25px auto;
+    display: block;
   }
   
+  .card-body {
+    border: 1px solid black;
+    width: 300px;
+ }
+ 
+ .img-container img {
+    max-width: 100%;
+    height: auto;
+ }
+ 
+ .card-body p, .card-body h1 {
+    margin: 8px;
+ }
+ 
 
-/*Navbar*/
+/*Navbar
 .navbar{
     display: flex;
     width: 100%;
+    
     justify-content: space-between;
     padding: 10px;
     background-color: #DAB785;
-}
+}*/
 /*logo
 .logo{
     background-color: #DAB785;
